--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=ProductTutorial;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=ProductTutorial;Integrated Security=True;Trust Server Certificate=True",
+    "EmployeeConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=EmployeeApi;Integrated Security=True;Trust Server Certificate=True"
   }
 }
