--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=ProductTutorial;Integrated Security=True;Trust Server Certificate=True",
     "EmployeeConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=EmployeeApi;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "MySettings": {
+    "ApiBaseUrl": "https://localhost:7142/employees"
   }
 }
